.env.txt
Last login: Tue Mar 18 01:23:04 on ttys120
atorrella@MacBookPro ~ % cd ~/Documents/youtube-claude-app/Users/atorrella/Desktop
cd: no such file or directory: /Users/atorrella/Documents/youtube-claude-app/Users/atorrella/Desktop
atorrella@MacBookPro ~ % cd ~//Users/atorrella/Desktop/Youtube-claude-app
cd: no such file or directory: /Users/atorrella//Users/atorrella/Desktop/Youtube-claude-app
atorrella@MacBookPro ~ % cd ~/Desktop/youtube-claude-app 
atorrella@MacBookPro youtube-claude-app % pip install python-dotenv
zsh: command not found: pip
atorrella@MacBookPro youtube-claude-app % pip install python-dotenv
zsh: command not found: pip
atorrella@MacBookPro youtube-claude-app % pip3 install python-dotenv
Collecting python-dotenv
  Downloading python_dotenv-1.0.1-py3-none-any.whl.metadata (23 kB)
Downloading python_dotenv-1.0.1-py3-none-any.whl (19 kB)
Installing collected packages: python-dotenv
Successfully installed python-dotenv-1.0.1

[notice] A new release of pip is available: 24.3.1 -> 25.0.1
[notice] To update, run: pip3 install --upgrade pip
atorrella@MacBookPro youtube-claude-app % python3 test_env.py
  File "/Users/atorrella/Desktop/Youtube-claude-app/test_env.py", line 1
    {\rtf1\ansi\ansicpg1252\cocoartf2821
      ^
SyntaxError: unexpected character after line continuation character
atorrella@MacBookPro youtube-claude-app % python3 test_env.py
YouTube API Key not found
Claude API Key not found
atorrella@MacBookPro youtube-claude-app % ls -la
total 128
drwxr-xr-x@ 20 atorrella  staff   640 18 Mar 01:41 .
drwx------@ 23 atorrella  staff   736 18 Mar 00:38 ..
-rw-r--r--@  1 atorrella  staff  6148 18 Mar 01:41 .DS_Store
drwxr-xr-x@  8 atorrella  staff   256 18 Mar 01:33 .venv
-rw-r--r--@  1 atorrella  staff   288 17 Mar 16:45 API keys Storage.env
drwxr-xr-x   3 atorrella  staff    96 18 Mar 00:29 Documents
-rw-r--r--@  1 atorrella  staff   471 17 Mar 16:21 README.md
-rw-r--r--@  1 atorrella  staff   182 18 Mar 01:41 YouTube-Claude Integration App.env
-rw-r--r--@  1 atorrella  staff    87 18 Mar 01:40 YouTube-Claude Integration App.env.example
-rw-r--r--@  1 atorrella  staff   392 18 Mar 01:18 YouTube-Claude Integration App.gitignore
drwxr-xr-x@  5 atorrella  staff   160 17 Mar 23:09 __pycache__
-rw-r--r--@  1 atorrella  staff  7359 18 Mar 00:09 app.py
-rw-r--r--@  1 atorrella  staff  2882 17 Mar 17:49 app_backup.py
-rw-r--r--@  1 atorrella  staff  4014 17 Mar 23:09 claude_client.py
drwxr-xr-x@  3 atorrella  staff    96 18 Mar 00:15 instance
-rw-r--r--@  1 atorrella  staff  1591 17 Mar 17:44 models.py
-rw-r--r--@  1 atorrella  staff   160 17 Mar 16:03 requirements.txt
drwxr-xr-x@  6 atorrella  staff   192 17 Mar 19:43 templates
-rw-r--r--@  1 atorrella  staff   479 18 Mar 01:39 test_env.py
-rw-r--r--@  1 atorrella  staff  5247 17 Mar 22:57 youtube_client.py
atorrella@MacBookPro youtube-claude-app % cat .env | sed 's/\(.\{5\}\).*/\1.../'
cat: .env: No such file or directory
atorrella@MacBookPro youtube-claude-app % nano .env

  UW PICO 5.09                                     File: .env                                      Modified  

YOUTUBE_API_KEY=your_actual_youtube_api_key_here
ANTHROPIC_API_KEY=your_actual_anthropic_api_key_here


















^G Get Help       ^O WriteOut       ^R Read File      ^Y Prev Pg        ^K Cut Text       ^C Cur Pos        
^X Exit           ^J Justify        ^W Where is       ^V Next Pg        ^U UnCut Text     ^T To Spell       
